# calculus-ai-agent

./: AGENTS.md  CLAUDE.md  CLIENT_IMPLEMENTATION_PLAN.md  LEARNING_PLAN_FLOW.md  SERVER_IMPLEMENTATION_SUMMARY.md
server/: .gitignore  pyproject.toml  pytest.ini  run.py  test_semantic_scheduler.py
server/app/: main.py
server/app/api/: __init__.py
server/app/api/auth/: __init__.py  auth_api.py
server/app/api/chat_apis/: chat_api.py
server/app/api/episodic_memory/: __init__.py  episodic_memory_api.py
server/app/api/learning_plan_preparation/: __init__.py  content_generation_api.py  learning_plan_create.py
server/app/api/learning_preference_apis/: __init__.py  learning_preference_api.py
server/app/api/memory/: __init__.py  episodic.py  semantic.py
server/app/api/profile_apis/: profile.py
server/app/api/queries/: __init__.py  query_api.py
server/app/context/: __init__.py  builder.py  episodic.py  semantic.py  short_term.py
server/app/context/schemas/: __init__.py  context.py  learner_profile.py  learning_event.py
server/app/context/templates/: __init__.py  base.py
server/app/core/learning_plan_engine/: __init__.py  content_generator.py  (+2 more)
server/app/db/: create_tables.py  my_sql_config.py  redis_config.py
server/app/long_term_memory/: __init__.py
server/app/mcp/: __init__.py  client.py  start_server.py  web_search_server.py
server/app/models/: __init__.py  episodic_memory_model.py  learning_preference_model.py  profile_model.py  query_model.py  semantic_memory_model.py  user_model.py
server/app/services/: __init__.py  episodic_memory_cache.py  episodic_memory_extractor.py  episodic_memory_processor.py  episodic_memory_trigger.py  memory_manager.py  memory_queue.py  rag_service.py  response_summarizer.py  semantic_memory_extractor.py  semantic_memory_scheduler.py  semantic_memory_service.py
server/app/short_term_memory/: __init__.py  manager.py
server/app/utils/: auth_helpers.py  jwt_utils.py
server/tests/: test_auth_helpers.py  test_learning_preference_api.py
(+111 files in other folders)
